--- a/android/app/src/dev/res/values/strings.xml
+++ b/android/app/src/dev/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="camera_permission_title">Camera permission</string>
     <string name="camera_permission_message">To be able to read QR codes you need to grant the Camera permission.</string>
     <string name="camera_permission_button">Continue</string>
+    <string name="packager_connection_timeout">Please verify that the packager is running.</string>
 </resources>
