Introduce empty CodePushDeploymentKey

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">nativeTemplate</string>
+    <string moduleConfig="true" name="CodePushDeploymentKey"> </string>
 </resources>
